--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "hikingtrack",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@dfinity/agent": "^2.1.3",
     "@dfinity/auth-client": "^2.1.3",
@@ -11,7 +10,7 @@
     "@dfinity/ledger-icp": "^2.6.2",
     "@dfinity/principal": "^2.1.3",
     "@dfinity/utils": "^2.6.0",
-    "@nfid/identitykit": "^1.0.1",
+    "@junobuild/core": "^0.0.62",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
