--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HikingTrack",
-  "name": "Hiking Track Route Recorder",
+  "short_name": "AllTracks",
+  "name": "Alltracks Route Recorder",
   "icons": [
     {
       "src": "favicon.ico",
