--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Alltracks Route Recorder",
   "icons": [
     {
-      "src": "64x64.ico",
+      "src": "64x64.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
