--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csv-stringify": "^6.5.1",
     "file-saver": "^2.0.5",
     "idb": "^8.0.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
