--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dfinity/agent": "^2.1.3",
+    "@dfinity/auth-client": "^2.1.3",
+    "@dfinity/candid": "^2.1.3",
+    "@dfinity/identity": "^2.1.3",
+    "@dfinity/ledger-icp": "^2.6.3",
+    "@dfinity/principal": "^2.1.3",
+    "@dfinity/utils": "^2.7.0",
     "@junobuild/core": "^0.0.62",
+    "@nfid/identitykit": "^1.0.2",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.14",
