--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "idb": "^8.0.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
