--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@dfinity/utils": "^2.7.0",
     "@junobuild/core": "^0.0.62",
     "@nfid/identitykit": "^1.0.2",
+    "@simplewebauthn/types": "^12.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.14",
