hide automatic track option

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,8 @@
     { "source": "/event/:eventId", "destination": "/" },
     { "source": "/user/:userKey", "destination": "/" },
     { "source": "/live/:liveId", "destination": "/" },
-    { "source": "/trails", "destination": "/" }
+    { "source": "/trails", "destination": "/" },
+    { "source": "/guide", "destination": "/" }
+    
   ]
 }
