--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.0",
     "uuid": "^11.0.2"
+    ,
+    "ethers": "^6.8.0",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
