--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@types/leaflet": "^1.9.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vercel/analytics": "^1.5.0",
     "arweave": "^1.15.5",
     "arweave-bundles": "^1.0.3",
     "csv-stringify": "^6.5.1",
+    "ethers": "^6.8.0",
     "file-saver": "^2.0.5",
     "idb": "^8.0.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
@@ -38,9 +41,6 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.0",
     "uuid": "^11.0.2"
-    ,
-    "ethers": "^6.8.0",
-    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
