--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "csv-stringify": "^6.5.1",
     "ethers": "^6.8.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "idb": "^8.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
