--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,19 +33,25 @@
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/stack": "^7.6.12",
+    "@types/leaflet": "^1.9.21",
     "expo": "~54.0.29",
     "expo-file-system": "^19.0.21",
     "expo-image-picker": "^17.0.10",
     "expo-location": "^19.0.8",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
+    "leaflet": "^1.9.4",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.29.1",
-    "react-native-maps": "^1.26.20",
-    "react-native-reanimated": "^4.2.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
